@@ -9,6 +9,78 @@
           "classSimpleName": "Builder",
           "methodName": "requiresVersion",
           "justification": "Graph providers may run into problems with the test suite if they do not have a way to detect the version and type of IO being requested of them so that they can provide the right version of their IoRegistry instances."
+        },
+        {
+          "code": "java.method.parameterTypeParameterChanged",
+          "old": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::to(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<E, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "new": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::to(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "oldType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<E extends java.lang.Object, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "newType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "package": "org.apache.tinkerpop.gremlin.process.traversal.dsl.graph",
+          "classSimpleName": "DefaultGraphTraversal",
+          "methodName": "to",
+          "parameterIndex": "0",
+          "justification": "Generalized from E to ? to reduce overly complicated typing"
+        },
+        {
+          "code": "java.method.parameterTypeParameterChanged",
+          "old": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::from(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<E, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "new": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::from(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "oldType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<E extends java.lang.Object, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "newType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "package": "org.apache.tinkerpop.gremlin.process.traversal.dsl.graph",
+          "classSimpleName": "DefaultGraphTraversal",
+          "methodName": "from",
+          "parameterIndex": "0",
+          "justification": "Generalized from E to ? to reduce overly complicated typing"
+        },
+        {
+          "code": "java.method.parameterTypeParameterChanged",
+          "old": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::to(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<E, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "new": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::to(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "oldType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<E extends java.lang.Object, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "newType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "package": "org.apache.tinkerpop.gremlin.process.traversal.dsl.graph",
+          "classSimpleName": "GraphTraversal",
+          "methodName": "to",
+          "parameterIndex": "0",
+          "justification": "Generalized from E to ? to reduce overly complicated typing"
+        },
+        {
+          "code": "java.method.parameterTypeParameterChanged",
+          "old": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::from(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<E, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "new": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::from(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "oldType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<E extends java.lang.Object, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "newType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "package": "org.apache.tinkerpop.gremlin.process.traversal.dsl.graph",
+          "classSimpleName": "GraphTraversal",
+          "methodName": "from",
+          "parameterIndex": "0",
+          "justification": "Generalized from E to ? to reduce overly complicated typing"
+        },
+        {
+          "code": "java.method.parameterTypeParameterChanged",
+          "old": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::to(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<E, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "new": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::to(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "oldType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<E extends java.lang.Object, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "newType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "package": "org.apache.tinkerpop.gremlin.process.traversal.dsl.graph",
+          "classSimpleName": "Admin",
+          "methodName": "to",
+          "parameterIndex": "0",
+          "justification": "Generalized from E to ? to reduce overly complicated typing"
+        },
+        {
+          "code": "java.method.parameterTypeParameterChanged",
+          "old": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::from(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<E, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "new": "method parameter org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E> org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal<S, E>::from(===org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>===)",
+          "oldType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<E extends java.lang.Object, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "newType": "org.apache.tinkerpop.gremlin.process.traversal.Traversal<?, org.apache.tinkerpop.gremlin.structure.Vertex>",
+          "package": "org.apache.tinkerpop.gremlin.process.traversal.dsl.graph",
+          "classSimpleName": "Admin",
+          "methodName": "from",
+          "parameterIndex": "0",
+          "justification": "Generalized from E to ? to reduce overly complicated typing"
         }
       ]
     }
